worked on text on index.html, was not wrapping correctly

--- a/style.css
+++ b/style.css
@@ -15,3 +15,6 @@
     margin-top: 15px;
     margin-bottom: 0px;
 }
+.card-img-top {
+    
+}
